<resources>
    <string name="app_name">SettingsEditor</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_global">Global</string>
    <string name="tab_system">System</string>
    <string name="tab_secure">Secure</string>
    <string name="service_auto_run">Service Auto Run</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="item_name">Name</string>
    <string name="item_value">Value</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="empty_text">Empty Text</string>
    <string name="search">Search</string>
</resources>