<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/auto_run"
        android:checkable="true"
        android:title="@string/service_auto_run"
        app:showAsAction="never" />
    <item
        android:id="@+id/run"
        android:title="@string/start_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/stop"
        android:title="@string/stop_service"
        app:showAsAction="never" />
</menu>
