<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/edit_box_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text" />

    <EditText
        android:id="@+id/edit_box_item_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Empty value"
        android:inputType="text"
        tools:ignore="LabelFor" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_box_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/edit_box_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
